--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,15 +7,12 @@
     "skipLibCheck": true,
     "typeRoots": ["node_modules/@types"],
 
-    /* Bundler mode */
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "allowImportingTsExtensions": true,
-    "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "preserve",
 
-    /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
